--- a/styles.css
+++ b/styles.css
@@ -58,11 +58,13 @@ header {
     cursor: pointer;
 }
 .hero-title {
+    margin-top: 0px;
     text-align: center;
-    color: rgb(0, 0, 0);
+    background-color: rgba(255, 255, 255, 0.15);
+    /* color: black; */
 }
 .hero-choice:hover .hero-title {
-    color: rgb(255, 255, 255);
+    background-color: orange;
 }
 .hero-button {
     margin: auto;
